--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,9 @@ input, select, textarea {
 	}
 
 	body {
-		background: #312450;
+		background-color: #FFFFFF !important; /* White background */
+        	color: #000000 !important; /* Black text */
+    		font-family: Arial, sans-serif !important; /* Optional: Set a default font */
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
