--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,6 +69,7 @@ table {
 }
 
 body {
+	color: #000000 !important; /* Black text */
 	-webkit-text-size-adjust: none;
 }
 
@@ -96,12 +97,18 @@ input, select, textarea {
 	}
 
 	body {
+		background-color: #FFFFFF !important; /* White background */
+        	color: #000000 !important; /* Black text */
+    		font-family: Arial, sans-serif !important; /* Optional: Set a default font */
 		-ms-overflow-style: scrollbar;
 	}
 
 	@media screen and (max-width: 480px) {
 
 		html, body {
+			background-color: #FFFFFF !important; /* White background */
+        		color: #000000 !important; /* Black text */
+    			font-family: Arial, sans-serif !important; /* Optional: Set a default font */
 			min-width: 320px;
 		}
 
@@ -135,7 +142,8 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgba(255, 255, 255, 0.55);
+		/*color: rgba(255, 255, 255, 0.55);*/
+		color: #000000 !important; /* Black text */
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: normal;
