--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,6 +142,9 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
+		background-color: #FFFFFF !important; /* White background */
+        	color: #000000 !important; /* Black text */
+    		font-family: Arial, sans-serif !important; /* Optional: Set a default font */
 		/*color: rgba(255, 255, 255, 0.55);*/
 		color: #000000 !important; /* Black text */
 		font-family: Arial, Helvetica, sans-serif;
