--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,7 @@ section, summary, time, mark, audio, video {
 
 /* Ensure links are visible */
 #sidebar nav ul li a {
-    color: #FF0000; /* Red color for links */
+    color: #FFFFFF; /* Red color for links */
     text-decoration: none;
 }
 
