--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,7 +117,7 @@ body {
 }
 
 #fixed-links ul li a {
-    color: #FF0000; /* Red color for the links */
+    color: #FFFFFF; /* white color for the links */
     text-decoration: none; /* Remove underline from links */
 }
 
