--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
@@ -54,6 +55,7 @@ body {
     margin-top: 120px; /* Adjust this margin to match the sidebar height */
     padding: 20px;
     word-wrap: break-word; /* Ensure long words break properly */
+    column-width: 25ch; /* Ensure content starts in column with width of 25 characters */
 }
 
 /* Icons styles */
@@ -93,5 +95,6 @@ body {
     #wrapper {
         margin-left: 240px; /* Adjust this margin to match the sidebar width */
         margin-top: 0;
+        column-width: auto; /* Reset column width for larger screens */
     }
 }
