--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,9 +27,8 @@ body {
     padding: 0;
     margin: 0;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: flex-start; /* Align items to the left */
 }
 
 #sidebar nav ul li {
@@ -52,14 +51,14 @@ body {
 
 /* Wrapper styles */
 #wrapper {
-    margin-top: 120px; /* Adjust this margin to match the sidebar height */
+    margin-top: 200px; /* Adjust this margin to match the sidebar height */
     padding: 20px;
     word-wrap: break-word; /* Ensure long words break properly */
 }
 
 /* Content column control */
 #content {
-    margin-left: 2em; /* Start the content after a specific column */
+    margin-left: 0; /* Start the content directly below the sidebar */
 }
 
 /* Icons styles */
@@ -104,5 +103,6 @@ body {
     /* Reset content margin for larger screens */
     #content {
         margin-left: 0;
+        max-width: none; /* Reset max-width for larger screens */
     }
 }
