--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,6 +88,7 @@ body {
 /* Media Queries for responsive design */
 @media (min-width: 100px) {
     #sidebar {
+        text-align: center;
         width: 200px;
         height: 100%;
         position: fixed;
