--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,10 +10,14 @@ body {
 /* Sidebar styles */
 #sidebar {
     width: 100%;
-    max-width: 25ch; /* Set max width to 15 characters */
+    max-width: 15ch; /* Set max width to 15 characters */
     background-color: #f4f4f4;
     padding: 20px 20px 20px 5px; /* Set left padding to 5px */
     z-index: 1000; /* Ensure sidebar stays on top */
+    position: fixed;
+    top: 0;
+    left: 0;
+    white-space: nowrap; /* Prevent wrapping of words within links */
 }
 
 #sidebar .inner {
@@ -49,11 +53,12 @@ body {
 
 /* Wrapper styles */
 #wrapper {
-    padding: 28px;
+    padding: 20px;
     padding-left: 3px; /* Set left padding */
     max-width: 30ch; /* Set max width to 30 characters per line */
     word-wrap: break-word; /* Ensure long words break properly */
-    margin-top: 180px; /* Adjust this margin to clear the height of the sidebar */
+    margin-top: 200px; /* Adjust this margin to clear the height of the sidebar */
+    margin-left: 17ch; /* Adjust this margin to match the new sidebar width plus some padding */
 }
 
 /* Content column control */
@@ -84,12 +89,11 @@ body {
 /* Media Queries for responsive design */
 @media (min-width: 768px) {
     #sidebar {
-        width: 50ch;
+        width: 15ch;
         height: 100%;
         position: fixed;
         top: 0;
         left: 0;
-        max-width: 15ch;
     }
 
     #sidebar nav ul {
@@ -97,7 +101,7 @@ body {
     }
 
     #wrapper {
-        margin-left: 5ch; /* Adjust this margin to match the sidebar width plus some padding */
+        margin-left: 17ch; /* Adjust this margin to match the new sidebar width plus some padding */
         margin-top: 0;
         padding-left: 20px; /* Adjust padding for larger screens */
         max-width: none; /* Reset max-width for larger screens */
