--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,8 +9,7 @@ body {
 
 /* Sidebar styles */
 #sidebar {
-    width: 100%;
-    max-width: 15ch; /* Set max width to 15 characters */
+    width: 15ch; /* Set width to 15 characters */
     background-color: #f4f4f4;
     padding: 20px 20px 20px 5px; /* Set left padding to 5px */
     z-index: 1000; /* Ensure sidebar stays on top */
@@ -57,7 +56,7 @@ body {
     padding-left: 3px; /* Set left padding */
     max-width: 30ch; /* Set max width to 30 characters per line */
     word-wrap: break-word; /* Ensure long words break properly */
-    margin-top: 200px; /* Adjust this margin to clear the height of the sidebar */
+    margin-top: 0; /* No top margin needed */
     margin-left: 17ch; /* Adjust this margin to match the new sidebar width plus some padding */
 }
 
