--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,8 +9,8 @@ body {
 
 /* Sidebar styles */
 #sidebar {
-    width: 15ch; /* Set width to 15 characters */
-    background-color: #f8f8f8;
+    width: 30ch; /* Set width to 15 characters */
+    background-color: ##FFFDD0;
     padding: 200px 200px 200px 50px; /* Set left padding to 5px */
     z-index: 1000; /* Ensure sidebar stays on top */
     position: fixed;
