--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,8 +10,10 @@ body {
 /* Sidebar styles */
 #sidebar {
     width: 25ch; /* Increase the width to 25 characters */
-    background-color: #f4f4f4;
-    padding: 20px 20px 20px 5px; /* Set left padding to 5px */
+    background-color: #f1f1f1;
+    padding: 0;
+    width: 200px;
+    
     z-index: 1000; /* Ensure sidebar stays on top */
     position: fixed;
     top: 0;
